external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.move:4:11
  │
4 │         0 { f } = 0;
  │           ^
  │           │
  │           Unexpected '{'
  │           Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.move:4:11
  │
4 │         0 { f } = 0;
  │           ^
  │           │
  │           Unexpected '{'
  │           Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

